--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -7,6 +7,7 @@
     display: flex;
     background-color: white;
     font-family: 'Londrina Solid', cursive;
+    display: inline-block;
 }
 
 .description{
@@ -17,10 +18,15 @@
 
 h1{
     color: #002001;
-    line-height: 2;
-    font-size: 4vw;
+    line-height: 3;
+    font-size: 5vw;
 }
 
 p{
-    font-size: 1.6vw;
+    font-size: 2vw;
+}
+
+.education{
+    max-width: 60%;
+    margin-left: 10%;
 }
